# jax-llm

./: .gitignore  model.py  pyproject.toml  readme.md  sample.py  train.py
data/: install.sh
