[project]
name = "jax_transformer"
version = "0.1.0"
description = ""
authors = [{ name = "clay-arras", email = "astrollin.neil@gmail.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = [
    "jax>=0.9.2",
    "jax-metal>=0.1.1",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
]

[tool.uv]
package = false
